--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span>y</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Aku ada bunga spesial buat kamu♥️</span>
     </div>
     <div class="button">
         <button>
